# workout-planner

./: .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  db.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  Dockerfile.prod  Dockerfile.traefik  __init__.py  alembic.ini  backend.py  database.py  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  dockerfile.prod  main.py  models.py  prestart.sh  pyproject.toml  requirements.txt  setup.py  traefik.dev.toml  traefik.prod.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/database/: database.py  models.py
backend/app/routers/: exercise_info.py  exercises.py  workouts.py
backend/app/routers/admin/: admin.py
backend/app/routers/users/: exercises.py  users.py  workouts.py
backend/database/: database.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 0195ef839f28_initial_migration.py  5658c67d14a9_remove_muscle_from_exercise_info.py  e113d5b258f8_initial_migration.py  ee9ed6b96676_init_prod.py
backend/wpi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
frontend/: .env.local  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
src/: App.jsx  App.tsx  database.types.ts  index.css
src/components/: EditableNumberBox.jsx  Exercise.jsx  ExerciseHeader.jsx  Navbar.tsx  Navigation.tsx  NumberBox.jsx  NumberStepper.jsx  Set.jsx  index.ts
src/context/: index.ts  (+4 more)
(+125 files in other folders)
