[tool.poetry]
name = "wpi"
version = "0.1.0"
description = "The api for the Workout Planner app"
authors = ["Traison Diedrich"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
sqlmodel = "^0.0.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.23.2"
setuptools = "^68.2.2"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
